--- a/styles/style.css
+++ b/styles/style.css
@@ -14,15 +14,16 @@ html {
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 
-header{
-    position: sticky;
-    top: 0;
-}
+ header{
+  position: absolute;
+  top:0;
+  width: 100%;
+} 
 
 h2{
   font-size:2rem
@@ -82,7 +83,8 @@ margin-left: 40px;
 
 
 .menu {
-  position: fixed;
+  position: absolute;
+  top:0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -106,6 +108,7 @@ margin-left: 40px;
   padding: 5px;
   border-radius: 5px;
   transition: opacity 1s linear;
+
 }
 
 .display_menu {
@@ -118,8 +121,8 @@ margin-left: 40px;
 }
 
 .container {
-  margin: 0 10px;
-  padding-top: 20px;
+
+  padding-top: 200px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -216,4 +219,69 @@ input[type="file"]:hover {
   left: 95%;
   cursor: pointer;
 }
+
+.container_webserver{
+  padding-top: 20px;
+  margin-left: 20px;
+  display: flex;
+  justify-content:center;
+  align-items:flex-start;
+  gap: 20px;
+  width: 90%;
+
+}
+
+
+.container_webserver_info{
+  width: 50%;
+  padding-top: 150px;
+}
+
+.container_webserver_info p
+{
+  font-size: 1.5rem;
+  margin-bottom: 50px;
+}
+
+.container_webserver_info ul li
+{
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.container_webserver_tuto{
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.container_webserver_tuto h2{
+  width: 100%;
+  position: relative;
+  border-radius: 5px;
+  font-size: 3rem;
+  color: white;
+  text-align: center;
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+}
+
+@media only screen and (max-width: 1000px) {
+  .container_webserver{
+    flex-direction: column;
+  }
+
+  .container_webserver_info{
+    width: 90%;
+    padding-top: 50px;
+  }
+  .container_webserver{
+    width: 90%;
+  }
+}
+
 
