--- a/styles/style.css
+++ b/styles/style.css
@@ -16,17 +16,21 @@ html {
 body {
   width: 100%;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-
- header{
+header {
   position: absolute;
-  top:0;
-  width: 100%;
-} 
+  top: 0;
 
-h2{
-  font-size:2rem
+  width: 100%;
+}
+
+h2 {
+  font-size: 2rem;
 }
 
 .container_header {
@@ -39,39 +43,36 @@ h2{
   text-align: center;
   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
   border-radius: 10px;
-  margin: 10px;
+  margin: 0 10px;
   padding: 10px;
 }
-.container_header h1{
-
-margin-left: 40px;
-
+.container_header h1 {
+  margin-left: 40px;
 }
-.container_header svg{
+.container_header svg {
   width: 50px;
 }
 
-.container_download{
+.container_download {
   position: relative;
 }
 
-.number_download{
+.number_download {
   font-size: 2rem;
   color: blue;
   position: absolute;
   top: 0;
   right: 5px;
-  transition: all .2s ease-in-out;
-
+  transition: all 0.2s ease-in-out;
 }
 
-.animNumberDownload{
+.animNumberDownload {
   animation-name: animNumber;
   animation-duration: 1s;
   animation-iteration-count: infinite;
 }
 
-@keyframes animNumber{
+@keyframes animNumber {
   from {
     font-size: 2rem;
   }
@@ -81,16 +82,14 @@ margin-left: 40px;
   }
 }
 
-
 .menu {
   position: absolute;
-  top:0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   padding: 5px;
-  top: 10px;
+  top: 0;
   left: 10px;
   width: 150px;
   height: 100%;
@@ -108,12 +107,11 @@ margin-left: 40px;
   padding: 5px;
   border-radius: 5px;
   transition: opacity 1s linear;
-
 }
 
 .display_menu {
-    transition: opacity 1s linear;
-    opacity: 1;
+  transition: opacity 1s linear;
+  opacity: 1;
 }
 
 .menu svg {
@@ -121,8 +119,17 @@ margin-left: 40px;
 }
 
 .container {
+  margin-top: 1150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 95%;
 
-  padding-top: 200px;
+
+}
+.container_divers {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -157,8 +164,8 @@ margin-left: 40px;
   position: absolute;
   width: 100%;
   height: 100%;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   z-index: 2;
   backdrop-filter: blur(6px);
 }
@@ -181,7 +188,6 @@ margin-left: 40px;
 }
 
 .container_form form {
-
   font-size: 2rem;
   width: 100%;
   display: flex;
@@ -208,8 +214,8 @@ input[type="file"]:hover {
 }
 
 #addtuto:hover {
-    text-decoration: underline;
-    cursor: pointer;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .close {
@@ -220,36 +226,32 @@ input[type="file"]:hover {
   cursor: pointer;
 }
 
-.container_webserver{
+.container_webserver {
   padding-top: 20px;
   margin-left: 20px;
   display: flex;
-  justify-content:center;
-  align-items:flex-start;
+  justify-content: center;
+  align-items: flex-start;
   gap: 20px;
-  width: 90%;
-
+  width: 100%;
 }
 
-
-.container_webserver_info{
+.container_webserver_info {
   width: 50%;
   padding-top: 150px;
 }
 
-.container_webserver_info p
-{
+.container_webserver_info p {
   font-size: 1.5rem;
   margin-bottom: 50px;
 }
 
-.container_webserver_info ul li
-{
+.container_webserver_info ul li {
   font-size: 1.5rem;
   margin-bottom: 10px;
 }
 
-.container_webserver_tuto{
+.container_webserver_tuto {
   padding-top: 20px;
   display: flex;
   flex-direction: column;
@@ -257,10 +259,10 @@ input[type="file"]:hover {
   align-items: center;
   gap: 20px;
   width: 80%;
-  margin: 0 auto;
+  margin: 50px auto;
 }
 
-.container_webserver_tuto h2{
+h2 {
   width: 100%;
   position: relative;
   border-radius: 5px;
@@ -271,17 +273,15 @@ input[type="file"]:hover {
 }
 
 @media only screen and (max-width: 1000px) {
-  .container_webserver{
+  .container_webserver {
     flex-direction: column;
   }
 
-  .container_webserver_info{
+  .container_webserver_info {
     width: 90%;
     padding-top: 50px;
   }
-  .container_webserver{
+  .container_webserver {
     width: 90%;
   }
 }
-
-
