--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Acme&family=Amatic+SC:wght@400;700&family=DynaPuff:wght@400;500&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 html {
-  font-size: 10px;
   font-family: "Acme", sans-serif;
   font-family: "Amatic SC", cursive;
   font-family: "DynaPuff", cursive;
@@ -21,252 +14,22 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-header{
-  width: 100%;
-  height: 150px;
-  display: flex;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-.container_header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  font-size: 5rem;
-  color: white;
-  text-align: center;
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-  border-radius: 10px;
-  width: 90%;
-}
-.container_header h1 {
-  margin-left: 40px;
-}
-.container_header svg {
-  width: 50px;
-}
-
-.container_download {
-  position: relative;
-}
-
-.number_download {
-  font-size: 2rem;
-  color: blue;
-  position: absolute;
-  top: 0;
-  right: 5px;
-  transition: all 0.2s ease-in-out;
-}
-
-.animNumberDownload {
-  animation-name: animNumber;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes animNumber {
-  from {
-    font-size: 2rem;
-  }
-
-  to {
-    font-size: 3rem;
-  }
-}
-
-.menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  padding: 5px;
-  top: 0;
-  left: 10px;
-  width: 150px;
-  height: 100%;
-  margin: 5px;
-  font-size: 1.5rem;
-
-  z-index: 1;
-}
-.container_link {
-  opacity: 0;
-  background: #085078;
-  background: -webkit-linear-gradient(to right, #85d8ce, #085078);
-  background: linear-gradient(to right, #85d8ce, #085078);
-  height: 200px;
-  padding: 5px;
-  border-radius: 5px;
-  transition: opacity 1s linear;
-}
-
-.display_menu {
-  transition: opacity 1s linear;
-  opacity: 1;
-}
-
-.menu svg {
-  height: 50px;
-}
-
-.container {
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  width: 95%;
-
-
-}
-.container_divers {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  width: 80%;
-  margin: 0 auto;
-}
-
-.uploader_files {
-  width: 1500px;
-  margin: 10px auto;
-  display: flex;
-  justify-content: space-around;
-}
-
-.container_video {
-  min-width: 320px;
-  width: 500px;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-  font-size: 0.8rem;
-  border-radius: 5px;
-}
-
-.overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  backdrop-filter: blur(6px);
-}
-
-.container_form {
-  position: absolute;
-  min-width: 300px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 10px;
-  background: #085078;
-  background: -webkit-linear-gradient(to right, #85d8ce, #085078);
-  background: linear-gradient(to right, #85d8ce, #085078);
-  z-index: 3;
-  border-top: 4px solid rgb(240, 34, 34);
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  box-shadow: 0 5px 10px rgba(1, 204, 255, 0.438);
-}
-
-.container_form form {
-  font-size: 2rem;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 10px;
-}
-
-.container_form label,
-button,
-input[type="file"] {
-  font-size: 3rem;
-  border-radius: 5px;
-  padding: 5px;
-}
-
-.hide_form {
-  display: none;
-}
-
-input[type="file"]:hover {
-  background-color: rgb(221, 220, 220);
-}
-
-#addtuto:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.close {
-  font-size: 2rem;
-  position: absolute;
-  top: 5%;
-  left: 95%;
-  cursor: pointer;
-}
-
-.container_webserver {
-  padding-top: 20px;
-  margin-left: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 20px;
-  width: 100%;
-}
-
-.container_webserver_info {
-  width: 50%;
-  padding-top: 150px;
-}
-
-.container_webserver_info p {
-  font-size: 1.5rem;
-  margin-bottom: 50px;
-}
-
-.container_webserver_info ul li {
-  font-size: 1.5rem;
-  margin-bottom: 10px;
-}
-
-.container_webserver_tuto {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  width: 80%;
-  margin: 50px auto;
+  gap:10px;
 }
 
 h2 {
   width: 100%;
+  max-width: 1500px;
   border-radius: 5px;
   font-size: 3rem;
   color: white;
   text-align: center;
   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
+
+
+
+
 
 @media only screen and (max-width: 1000px) {
   .container_webserver {
@@ -278,9 +41,4 @@ h2 {
     width: 90%;
     padding-top: 50px;
   }
-  .container_header h1 {
-    margin-left:0;
-    font-size: 4rem;
-  }
-
-}
+} */
