--- a/styles/header.css
+++ b/styles/header.css
@@ -1,13 +1,14 @@
 header {
-  margin: 10px 0;
+  margin: 10px auto;
   width: 100%;
+  max-width: 1500px;
   height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1500px;
   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
   border-bottom-right-radius: 10px;
+  /* Border: Green Solid 1px; */
 }
 
 .menu {
