--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,13 @@ html {
 
 body {
   width: 100vw;
-  height: 100%;
+  /* Border: Green Solid 10px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap:10px;
-  margin: 0 20px;
+  margin: 0 auto;
 }
 
 h2 {
