--- a/styles/style.css
+++ b/styles/style.css
@@ -6,21 +6,19 @@ html {
   font-family: "DynaPuff", cursive;
 }
 
-
 body {
+  position: relative;
   width: 100vw;
-  /* Border: Green Solid 10px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap:10px;
-  margin: 0 auto;
+  gap: 10px;
 }
 
 h2 {
   width: 80%;
-  max-width: 1500px;
+  max-width: 2500px;
   border-radius: 5px;
   font-size: 2.5rem;
   color: white;
